--- a/_includes/App.html
+++ b/_includes/App.html
@@ -17,6 +17,7 @@ hello-zen.surge.sh
   <meta charset="utf-8"/>
   <script src="/dist/vue.min.js"></script>
   <script src="/dist/vue-router.min.js"></script>
+  <link rel="stylesheet" href="/dist/bootstrap.min.css"/>
  </head>
  <body>
   <div class="vue">
